# axum-debug

./: Cargo.toml  README.md
axum-debug/: Cargo.toml  README.md
axum-debug-macros/: Cargo.toml  README.md
axum-debug-macros/src/: lib.rs
axum-debug/src/: lib.rs
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/axum_debug/: all.html  attr.debug_handler.html  fn.check_service.html  fn.debug_service.html  index.html  macro.debug_router.html  sidebar-items.js
docs/axum_debug_macros/: all.html  attr.debug_handler.html  index.html  macro.debug_router!.html  macro.debug_router.html  sidebar-items.js
docs/src/axum_debug/: lib.rs.html
docs/src/axum_debug_macros/: lib.rs.html
