[package]
authors = ["Programatik <programatik29@gmail.com>"]
categories = ["development-tools::debugging"]
description = "Reserved for future use."
edition = "2018"
homepage = "https://github.com/programatik29/axum-debug"
keywords = ["axum", "debugging", "debug"]
license = "MIT"
name = "axum-debug-macros"
readme = "README.md"
repository = "https://github.com/programatik29/axum-debug"
version = "0.0.0"

[dependencies]
