[package]
authors = ["Programatik <programatik29@gmail.com>"]
categories = ["development-tools::debugging"]
description = "Macros for axum-debug crate."
edition = "2018"
homepage = "https://github.com/programatik29/axum-debug"
keywords = ["axum", "debugging", "debug"]
license = "MIT"
name = "axum-debug-macros"
readme = "README.md"
repository = "https://github.com/programatik29/axum-debug"
version = "0.0.0"

[lib]
proc-macro = true

[dependencies]
axum = "0.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
