[package]
authors = ["Programatik <programatik29@gmail.com>"]
categories = ["development-tools::debugging"]
description = "Better error messages for axum framework."
edition = "2018"
homepage = "https://github.com/programatik29/axum-debug"
keywords = ["axum", "debugging", "debug"]
license = "MIT"
name = "axum-debug"
readme = "README.md"
repository = "https://github.com/programatik29/axum-debug"
version = "0.0.0"

[dependencies]
axum = "0.2"

[dependencies.axum-debug-macros]
path = "../axum-debug-macros"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
