[package]
authors = ["Programatik <programatik29@gmail.com>"]
categories = ["development-tools::debugging"]
description = "Better error messages for axum framework."
edition = "2018"
homepage = "https://github.com/programatik29/axum-debug"
keywords = ["axum", "debugging", "debug"]
license = "MIT"
name = "axum-debug"
readme = "README.md"
repository = "https://github.com/programatik29/axum-debug"
version = "0.1.0"

[dependencies]
axum = "0.2"
bytes = "1"
http = "0.2"
http-body = "0.4"
tower-service = "0.3"

[dependencies.axum-debug-macros]
path = "../axum-debug-macros"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
